# artifice

./: README.md  docker-compose.yaml
backend/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  export_openapi.py  main.py  pyproject.toml  start.ps1
backend/api/v1/: __init__.py  qr_generator.py
backend/api/v1/hash/: __init__.py  hash_file.py  hash_generate.py  hash_info.py  hash_verify.py
backend/api/v1/password/: __init__.py  password.py
backend/api/v1/qr/: __init__.py  qr_generator.py  qr_scanner.py
backend/core/: config.py
backend/schemas/: error.py  hash.py  password.py  qr_generator.py  qr_scanner.py
backend/services/: exceptions.py  hash_service.py  password_service.py  qr_generator_service.py  qr_scanner_service.py
frontend/: .dockerignore  Dockerfile  openapi-ts.config.ts  openapi.json  package.json  pnpm-lock.yaml  start.ps1
frontend/src/: app.d.ts  app.html
frontend/src/lib/api/: README.md  config.ts  hash.ts  password.ts  qr.ts
frontend/src/lib/components/: Footer.svelte  Sidebar.svelte
frontend/src/lib/components/hash/: FileUploadPanel.svelte  HashInputPanel.svelte  HashSettingsPanel.svelte
frontend/src/lib/components/password/: PasswordStrength.svelte
frontend/src/lib/components/ui/: Button.svelte  Panel.svelte  (+13 more)
frontend/src/lib/config/: site.ts
frontend/src/lib/styles/: theme.css
frontend/src/routes/: +error.svelte  +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/hash/: +page.svelte  +page.ts
frontend/src/routes/password/: +page.svelte  +page.ts
frontend/src/routes/qr/: +page.svelte  +page.ts
(+28 files in other folders)
